--- a/views/opt_approx.ejs
+++ b/views/opt_approx.ejs
@@ -22,7 +22,11 @@
 
 <p>Where &alpha; is a parameter which details how interested the customer is in the product, and &beta; determines how much the price of the good affects the customer's desire to purchase the good. W is the Lambert W function. </p>
 
-<p> Finally, at the end of the post, I discovered that while there is an explicit formula for the optimal price (the equation shown above), computationally, it is far too slow to replace a numeric search for the optimal price. </p>
+<p> Finally, at the end of the post, I discovered that while there is an explicit formula for the optimal price (the equation shown above), computationally, the particular implementation I had used to find the Lambert W function was much slower than a standard numerical optimization. </p>
+
+## History of the Lambert W Function
+
+<p> 
 
 ## Approximating the Lambert W Function
 
