Updated webpage content

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -17,3 +17,14 @@ h1
   display: block;
   margin: 0 auto;
   font-size: 16px 
+
+.images
+  width: 700px;
+  height: 400px;
+  position: relative;
+  right: 110px;
+
+.navigation
+  position: relative;
+  left: 450px;
+  
