Updated page content

--- a/views/opt_approx.ejs
+++ b/views/opt_approx.ejs
@@ -116,9 +116,9 @@
 
 <p> In this post, I tested various approximations to the Lambert W function, with a fairly great deal of success, as not only were the approximations accurate, the runtimes of the approximations were fast.</p>
 
-<p> An inmportant point to note, however, is the range of x values within which the approximation works.  While it does hold for all values of x, for x&lt;0, the approximation will provide an imaginary answer.  This is a result of the fact that at x&lt;(-1/e), the Lambert W function takes on imaginary values.</p>
+<p> An important point to note, however, is the range of x values within which the approximation works.  While it does hold for all values of x, for x&lt;0, the approximation will provide an imaginary answer.  This is a result of the fact that at x&lt;(-1/e), the Lambert W function takes on imaginary values.</p>
 
-<p> For a more detailed look at both the uses of the W function, and the derivation of the approximation used, <a href="https://cs.uwaterloo.ca/research/tr/1993/03/W.pdf">This paper</a> is a fantastic resource.</p>
+<p> For a more detailed look at both the uses of the W function, and the derivation of the approximation used, <a href="https://cs.uwaterloo.ca/research/tr/1993/03/W.pdf">this paper</a> is a fantastic resource.</p>
 
 </xmp>
 </div>
