--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,4 @@
 body {
-  padding: 50px;
   font-family: HelveticaNeue, Helvetica, Arial, sans-serif !important;
   font-size: 16px;
 }
@@ -16,14 +15,36 @@ h1 {
   display: block;
   margin: 0 auto;
   font-size: 16px;
+  max-width: 500px;
+  margin: auto;
 }
 .images {
   width: 700px;
-  height:400px;
+  height: 400px;
   position: relative;
   right: 110px;
 }
-.navigation {
+.next {
   position: relative;
   left: 450px;
+}
+.previous {
+  position: relative;
+  right: 400px;
+}
+.top.border {
+  color: #fff;
+  width: 100%;
+  height: 50px;
+  background-color: #6495ed;
+  position: fixed;
+  top: 0px;
+  font-size: 27px;
+  font-family: HelveticaNeue;
+  text-align: center;
+}
+.top.border.end {
+  width: 100%;
+  height: 52px;
+  background-color: #4b0082;
 }
