--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,4 @@
 body
-  padding: 50px
   font-family: HelveticaNeue, Helvetica, Arial, sans-serif !important
   font-size: 16px 
 
@@ -17,6 +16,8 @@ h1
   display: block;
   margin: 0 auto;
   font-size: 16px 
+  max-width: 500px
+  margin: auto
 
 .images
   width: 700px;
@@ -24,7 +25,28 @@ h1
   position: relative;
   right: 110px;
 
-.navigation
+.next
   position: relative;
   left: 450px;
   
+.previous
+  position: relative;
+  right: 400px;
+
+.top.border
+  color: white
+  width: 100%;
+  height: 50px;
+  background-color: #6495ED;
+  position: fixed;
+  top: 0px;
+  font-size: 27px;
+  font-family: HelveticaNeue;
+  text-align: center
+
+.top.border.end
+  width: 100%;
+  height: 52px;
+  background-color:indigo
+
+
